# Salade_Loops_Studio-

./: LICENSE  PROMPT_TECHNIQUE_CODEX_AUDIT_MIXER.md
DontTouchISBackUp_ filefor-logic-lfo/: app.js  audioBackend.js  audioEngine.js  automationLane.js  bank.js  drumMachineHost.js  drumMappingStore.js  drumWindowState.js  drum_machine_fm.html  fx_chorus.js  fx_grossBeat.js  fx_reverb.js  index.html  inst_bass.js  inst_drums.js  inst_pad.js  inst_piano.js  inst_sampler_touski.js  inst_subbass.js  inst_violin.js  instrumentBase.js  instrumentPanel.js  mixer.js  package.json  pianoRoll.js  preload.js  presetStore.js  projectModel.js  renderHelpers.js  sampleDirectory.js  sampler.js  saveLoad.js  scheduler.js  tabs.js  transport.js  utils.js  wiring.js
DontTouchISBackUp_ filefor-logic-lfo/Juce-Cpp/engine/: CMakeLists.fm_patch.txt  CMakeLists.txt  FM_REFACTOR_README.md  README_SRC_SKELETON.md
DontTouchISBackUp_ filefor-logic-lfo/Juce-Cpp/engine/include/: AudioScheduler.h  CommandRouter.h  EngineCommand.h  FxChain.h  FxCompressor.h  FxReverb.h  ModMatrix.h
DontTouchISBackUp_ filefor-logic-lfo/Juce-Cpp/engine/include/instruments/: BassInstrument.h  DrumRuntime.h  DxPianoInstrument.h  FmLeadInstrument.h  FmPadInstrument.h  FmSubBassInstrument.h  InstrumentBase.h  InstrumentTypes.h  PadInstrument.h  RhodesFmInstrument.h  SampleTouskiInstrument.h  SubBassInstrument.h
DontTouchISBackUp_ filefor-logic-lfo/Juce-Cpp/engine/include/instruments/fm/: FmEngine.h  FmEnvelope.h  FmOperator.h  FmVoice.h
DontTouchISBackUp_ filefor-logic-lfo/Juce-Cpp/engine/src/: AudioEngineCore.cpp  CommandRouter.cpp  FxChain.cpp  FxChorus.cpp  FxCompressor.cpp  FxFactory.cpp  MixerEngine.cpp  ModMatrix.cpp  main.cpp
DontTouchISBackUp_ filefor-logic-lfo/Juce-Cpp/engine/src/instruments/: BassInstrument.cpp  DrumRuntime.cpp  FmBassInstrument.cpp  FmGrandPianoInstrument.cpp  FmInstrumentFactory.cpp  FmLeadInstrument.cpp  FmViolinInstrument.cpp  InstrumentFactory.cpp  InstrumentRegistry.cpp  PadInstrument.cpp  PianoInstrument.cpp  RhodesFmInstrument.cpp  SubBassInstrument.cpp
DontTouchISBackUp_ filefor-logic-lfo/Juce-Cpp/engine/src/instruments/fm/: FmEngine.cpp  FmEnvelope.cpp  FmOperator.cpp  FmVoice.cpp
Main/: Run SL-Studio.sh  audioBackend.js  audioBackendJUCE.js  audioEngine.js  automationLane.js  bank.js  boot.js  contextMenu.js  drumMachineHost.js  drum_machine_fm.html  index.html  inst_lead.js  inst_sample_paterne.js  inst_sampler_touski.js  inst_subbass.js  inst_violin.js  instrumentPanel.js  instrumentUI.js  juceInstructionLibrary.js  lfo.js  lfoCurveEditor.js  main.js  mixer.js  pianoRoll.js  pitchShifter.js  playlist.js  preload.js  projectModel.js  sampleDirectory.js  samplePatternEditor.js  sampler.js  saveLoad.js  scheduler.js  timeRulerSelection.js  timeline.js  transport.js  uiRefresh.js  utils.js  vstManager.js  wiring.js
Main/Juce-Cpp/engine/: CMakeLists.instrument_patch.txt  CMakeLists.txt  README.md
Main/Juce-Cpp/engine/.github/workflows/: build-sls-audio-engine-win.yml
Main/Juce-Cpp/engine/include/: AudioEngineCore.h  FxBase.h  FxChorus.h  FxDelay.h  FxFactory.h  FxFlanger.h  FxGrossBeat.h  LfoCurveEngine.h  LfoPresetEngine.h  MixerEngine.h
Main/Juce-Cpp/engine/include/instruments/: DrumInstrument.h  FmBassInstrument.h  FmDrumInstrument.h  FmGrandPianoInstrument.h  FmInstrumentBase.h  FmInstrumentFactory.h  FmViolinInstrument.h  InstrumentFactory.h  InstrumentRegistry.h  LeadInstrument.h  PianoInstrument.h  SampleTouskiRuntime.h  ViolinInstrument.h
Main/Juce-Cpp/engine/include/instruments/fm/: FmAlgorithm.h  FmPatch.h
Main/Juce-Cpp/engine/src/: AudioScheduler.cpp  EngineCommand.cpp  FxDelay.cpp  FxFlanger.cpp  FxGrossBeat.cpp  FxReverb.cpp  LfoCurveEngine.cpp  LfoPresetEngine.cpp  main.cpp
Main/Juce-Cpp/engine/src/instruments/: DrumInstrument.cpp  DxPianoInstrument.cpp  FmDrumInstrument.cpp  FmPadInstrument.cpp  FmSubBassInstrument.cpp  InstrumentBase.cpp  LeadInstrument.cpp  SampleTouskiInstrument.cpp  SampleTouskiRuntime.cpp  ViolinInstrument.cpp
Main/Juce-Cpp/engine/src/instruments/fm/: FmAlgorithm.cpp
Main/Juce-Cpp/vst/: CMakeLists.txt  README.md
Main/Juce-Cpp/vst/include/: VstHostStub.h
Main/Juce-Cpp/vst/src/: VstHostStub.cpp  main.cpp
Main/drum_kits/: electroFmLab.json  globalHybridA.json  jazzStudio.json  rockMetalKit.json  trapSub808.json
Main/scripts/: smoke-ipc.js
docs/: AUDIT_JUCE_RT_MIXER_2026-03.md  AUDIT_VST_DAW_COMPLET_2026-03.md  AUDIT_VST_MANAGER_HOST_SLS_2026-03.md  IPC.md  PROTOCOL_IPC.md  VST3_MANAGER_AUDIT_2026-03.md
old_ filefor-logic-lfo/: demoSeed.js  domRefs.js  fx_compressor.js  fx_delay.js  fx_flanger.js  index.html  inst_drums.js  inst_lead.js  inst_pad.js  lfo.js  lfoCurveEditor.js  main.js  mixer.js  package-lock.json  package.json  playlist.js  sampler.js  saveLoad.js  scheduler.js  timeRulerSelection.js  uiRefresh.js  wiring.js
